# Chess

./: .gitignore  CMakeLists.txt  README.md
src/: board.c  game.c  input.c  main.c  piece.c  pieces.c  variables.c
src/include/: board.h  game.h  input.h  piece.h  pieces.h  variables.h
